--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "devDependencies": {
     "@adonisjs/assembler": "^5.4.1",
     "@symfony/webpack-encore": "^1.8.1",
+    "@vicons/carbon": "^0.12.0",
     "adonis-preset-ts": "^2.1.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-adonis": "^2.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "naive-ui": "^2.25.2",
     "pino-pretty": "^7.5.1",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5",
+    "vfonts": "0.0.3",
     "youch": "^3.1.0",
     "youch-terminal": "^2.1.2"
   },
@@ -34,7 +37,7 @@
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
     "vue": "^3.2.29",
-    "vue-loader": "^17.0.0",
+    "vue-loader": "^16.7.0",
     "vue-router": "^4.0.12"
   }
 }
