--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "naive-ui": "^2.25.2",
     "pino-pretty": "^7.5.1",
     "prettier": "^2.5.1",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.6.0",
     "typescript": "^4.5.5",
     "vfonts": "0.0.3",
     "youch": "^3.1.0",
