--- a/package.json
+++ b/package.json
@@ -29,15 +29,21 @@
     "youch-terminal": "^2.1.2"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.0.10",
     "@adonisjs/core": "^5.4.2",
+    "@adonisjs/lucid": "^16.3.2",
     "@adonisjs/repl": "^3.1.8",
     "@adonisjs/session": "^6.1.2",
     "@adonisjs/shield": "^7.0.7",
     "@adonisjs/view": "^6.1.1",
     "@vue/compiler-sfc": "^3.2.31",
+    "axios": "^0.26.0",
+    "luxon": "^2.3.1",
+    "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
+    "sqlite3": "^5.0.2",
     "vue": "^3.2.29",
     "vue-loader": "^16.7.0",
     "vue-router": "^4.0.12"
